--- a/src/index.css
+++ b/src/index.css
@@ -179,7 +179,10 @@ header h1 {
     font-size: 22px;
 
 }
-
+.contenedor-producto .producto .botones-activos{
+    display:flex;
+    align-items: center;
+}
 .contenedor-producto .producto .boton-producto {
     display: block;
     margin: 10px auto;
@@ -189,7 +192,14 @@ header h1 {
     padding: 5px 15px;
     border-radius: 5px;
     cursor: pointer;
+    margin-right: 2px;
 }
+.contenedor-producto .producto .boton-producto .link-sin-estilo{
+    color: inherit;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 
 
 .carrito {
